# flapmap

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/flapmap/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/flapmap/: MainActivity.kt
app/src/main/java/com/example/flapmap/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: activity_main.xml
app/src/test/java/com/example/flapmap/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
